# view-monad

./: CHANGELOG.md  LICENSE  README.md  view-monad.cabal
.github/workflows/: haskell.yml
app/: Bench.hs  Main.hs
src/: ViewMonad.hs
src/Data/: ViewMonad.hs
src/Data/ViewMonad/: Html.hs  VirtualDom.hs
test/: Main.hs
