cabal-version:   3.0
name:            view-monad
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:  ViewMonad,
                      Data.ViewMonad
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <4.17.2.2,
        containers

executable view-monad
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <4.17.2.2,
        view-monad

test-suite view-monad-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <4.17.2.2,
        view-monad

benchmark view-monad-bench
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base <5,
        criterion >=0.5.0.0 && <1.7,
        view-monad
